--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.10.9",
     "multer": "^1.4.1",
+    "sharp": "^0.26.2",
     "validator": "^13.1.17"
   }
 }
