Setup env variables for jwt and mongodb

--- a/config/dev.env
+++ b/config/dev.env
@@ -1,2 +1,4 @@
 PORT=3000
 SENDGRID_API_KEY=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
+JWT_SECRET=thisismynewcourse
+MONGODB_URL=mongodb://127.0.0.1:27017/task-manager-api
