--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test": "jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch"
   },
   "keywords": [],
   "author": "",
